# VEF-state-engine

./: .gitignore  COLLABORATION_OPPORTUNITIES.md  CONTRIBUTING.md  LICENSE  README.md  VEF_DOCUMENTATION.md  pyproject.toml  setup.py  vef_state_engine_improved.py  vef_validation.py  vef_visualization.py
