[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vef-state-engine"
version = "1.0.0"
description = "Volume-to-Force Differential State Engine - Physics simulation framework for coupled oscillatory systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Mark Chrisman", email = "mark@example.com"}
]
keywords = [
    "physics",
    "simulation",
    "oscillatory-systems",
    "phase-coupling",
    "energy-dynamics",
    "numerical-integration"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering :: Physics",
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "matplotlib>=3.3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=3.0",
    "black>=22.0",
    "flake8>=4.0",
    "mypy>=0.950",
]

[project.urls]
Homepage = "https://github.com/markchrismanppnf-hash/VEF-state-engine"
Documentation = "https://github.com/markchrismanppnf-hash/VEF-state-engine#readme"
Repository = "https://github.com/markchrismanppnf-hash/VEF-state-engine.git"
"Bug Tracker" = "https://github.com/markchrismanppnf-hash/VEF-state-engine/issues"

[tool.black]
line-length = 100
target-version = ['py38', 'py39', 'py10', 'py11']

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
